// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array Field Test: got three values 1`] = `
<div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value=","
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value=",asdf "
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value="asdf"
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex center"
  >
    <a
      className="is-fullwidth is-info"
      onClick={[Function]}
    >
      Add
    </a>
  </div>
</div>
`;

exports[`Array Field Test: increased size to four 1`] = `
<div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value=","
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value=",asdf "
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value="asdf"
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value={null}
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex center"
  >
    <a
      className="is-fullwidth is-info"
      onClick={[Function]}
    >
      Add
    </a>
  </div>
</div>
`;

exports[`Array Field Test: removed second item 1`] = `
<div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value=","
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value="asdf"
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex flex1 center"
  >
    <input
      onChange={[Function]}
      type="text"
      value={null}
    />
    <a
      className="button is-warning  iconMargin"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1.2rem",
        }
      }
    >
      Delete
    </a>
  </div>
  <div
    className="flex center"
  >
    <a
      className="is-fullwidth is-info"
      onClick={[Function]}
    >
      Add
    </a>
  </div>
</div>
`;

exports[`Array Field Test: unchanged render 1`] = `
<div>
  <div
    className="flex center"
  >
    <a
      className="is-fullwidth is-info"
      onClick={[Function]}
    >
      Add
    </a>
  </div>
</div>
`;
